--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -1,4 +1,4 @@
-{% extends "store/base.html" %} {% load crispy_forms_tags %} {% block content %}
+{% extends "store/base.html" %} {% block content %}
 
 <main>
   <div class="container wow fadeIn">
@@ -6,8 +6,6 @@
     <div class="row">
       <div class="col-md-8 mb-4">
         <div class="card">
-          <!-- <form>{% csrf_token %} {{ form|crispy }}</form>
-          <button class="btn btn-primary" type="submit">Checkout</button> -->
           <form method="POST" class="card-body">
             {% csrf_token %}
 
@@ -208,9 +206,7 @@
         </div>
       </div>
 
-      {% comment %}
-      <div class="col-md-4 mb-4">{% include "order_snippet.html" %}</div>
-      {% endcomment %}
+      <div class="col-md-4 mb-4">{% include "store/order_snippet.html" %}</div>
     </div>
   </div>
 </main>
