coupon system is developed

--- a/ecommerce/store/templates/store/order_summary.html
+++ b/ecommerce/store/templates/store/order_summary.html
@@ -56,12 +56,12 @@
               >
             </td>
           </tr>
-          {% endfor %} {% comment %} {% if object.coupon %}
+          {% endfor %} {% if object.coupon %}
           <tr>
             <td colspan="4"><b>Coupon</b></td>
             <td><b>-${{ object.coupon.amount }}</b></td>
           </tr>
-          {% endif %} {% endcomment %} {% if object.get_total %}
+          {% endif %} {% if object.get_total %}
           <tr>
             <td colspan="4"><b>Order Total</b></td>
             <td><b>${{ object.get_total }}</b></td>
