--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -90,9 +90,8 @@
                 id="use_default_shipping"
               />
               <label class="custom-control-label" for="use_default_shipping"
-                >Use default shipping address: {{
-                default_shipping_address.street_address|truncatechars:10
-                }}</label
+                >Use default shipping address:
+                {{default_shipping_address.street_address|truncatechars:10}}</label
               >
             </div>
             {% endif %}
@@ -170,9 +169,8 @@
                 id="use_default_billing"
               />
               <label class="custom-control-label" for="use_default_billing"
-                >Use default billing address: {{
-                default_billing_address.street_address|truncatechars:10
-                }}</label
+                >Use default billing address:
+                {{default_billing_address.street_address|truncatechars:10}}</label
               >
             </div>
             {% endif %}
